kubernetes/k8s/deployment-product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodcut-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: name
        image: product_server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3001
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
