kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app-kubernetes
  labels:
    app.kubernetes.io/name: express-app-kubernetes
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: main-server-service
            port:
              number: 80

      - pathType: Prefix
        path: /product
        backend:
          service:
            name: product-service
            port:
              number: 80
